--- a/data/topics/3/competencies/1/competency.yaml
+++ b/data/topics/3/competencies/1/competency.yaml
@@ -1,3 +1,3 @@
 ---
-title: "Office Tools"
-description: "Textbearbeitung, Tabellenkalkulation, Präsentationen"
+title: "Development"
+description: "Tools benötigt für die täglichen Entwicklungstasks"
