--- a/data/topics/3/topic.yaml
+++ b/data/topics/3/topic.yaml
@@ -2,19 +2,19 @@
 title: "Tools / Dienste"
 description: "Verwendung von Tools und Dienste."
 year_calendar_weeks:
-  ## HTTP
-  3.1.1: 1 33-40
-  ## Betriebssysteme
+  ## Development
+  3.1.1: 1 40-50
+  3.1.2: 1 33-40
+  3.1.3: 1 40-50
+  3.1.4: 1 50-53
+  ## System
   3.2.1: 1 6-15
-  ## Datenbank
+  3.2.2: 1 15-22
+  3.2.3: 1 23-30
+  ## DevOps
   3.3.1: 1 40-48
-  
-  ## Scripting
-
-  ## Container
-
-  ## Deployment
-
-  ## Source Code Verwalten und Editieren
-
+  3.3.2: 1 48-60
+  3.3.3: 1 60-65
   ## Office
+  3.4.1: 1 10-20
+  3.4.2: 1 20-30
