--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,14 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.1.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
