--- a/src/main/resources/conf/semester.yaml
+++ b/src/main/resources/conf/semester.yaml
@@ -1,5 +1,5 @@
 # Quelle: https://gibb.ch/organisation/ferienplan
-semester:
+year_calendar_weeks:
   - start_at_week_nr: 33
     finish_at_week_nr: 4
   - start_at_week_nr: 5
