--- a/src/main/resources/data/conf/weeks_topic1.yaml
+++ b/src/main/resources/data/conf/weeks_topic1.yaml
@@ -1,49 +1,49 @@
-## Statische Webseite
-- id: 1.1.1
-  year: 1
-  year_calendar_week:
-    - start_at_week_nr: 33
+level_year_calendar_weeks:
+  ## Statische Webseite
+  - id: "1.1.1"
+    year: 1
+    year_calendar_week:
+      start_at_week_nr: 33
       finish_at_week_nr: 35
-- id: 1.1.2
-  year: 1
-  year_calendar_week:
-    - start_at_week_nr: 37
+  - id: "1.1.2"
+    year: 1
+    year_calendar_week:
+      start_at_week_nr: 37
       finish_at_week_nr: 39
-- id: 1.1.3
-  year: 1
-  year_calendar_week:
-    - start_at_week_nr: 41
+  - id: "1.1.3"
+    year: 1
+    year_calendar_week:
+      start_at_week_nr: 41
       finish_at_week_nr: 43
-- id: 1.1.4
-  year: 1
-  year_calendar_week:
-    - start_at_week_nr: 45
+  - id: "1.1.4"
+    year: 1
+    year_calendar_week:
+      start_at_week_nr: 45
       finish_at_week_nr: 47
-## JavaScript
-- id: 1.2.1
-  year: 1
-  year_calendar_week:
-    - start_at_week_nr: 33
+  ## JavaScript
+  - id: "1.2.1"
+    year: 1
+    year_calendar_week:
+      start_at_week_nr: 33
       finish_at_week_nr: 35
-- id: 1.2.2
-  year: 1
-  year_calendar_week:
-    - start_at_week_nr: 37
+  - id: "1.2.2"
+    year: 1
+    year_calendar_week:
+      start_at_week_nr: 37
       finish_at_week_nr: 39
-- id: 1.2.3
-  year: 1
-  year_calendar_week:
-    - start_at_week_nr: 41
+  - id: "1.2.3"
+    year: 1
+    year_calendar_week:
+      start_at_week_nr: 41
       finish_at_week_nr: 43
-## User Experience (UX)
-- id: 1.3.1
-  year: 1
-  year_calendar_week:
-    - start_at_week_nr: 33
+  ## User Experience (UX)
+  - id: "1.3.1"
+    year: 1
+    year_calendar_week:
+      start_at_week_nr: 33
       finish_at_week_nr: 35
-- id: 1.3.2
-  year: 1
-  year_calendar_week:
-    - start_at_week_nr: 37
+  - id: "1.3.2"
+    year: 1
+    year_calendar_week:
+      start_at_week_nr: 37
       finish_at_week_nr: 39
-
