--- a/src/main/resources/data/conf/weeks_topic2.yaml
+++ b/src/main/resources/data/conf/weeks_topic2.yaml
@@ -1,102 +1,102 @@
-## Programmierung
-- id: 2.1.1
-  year: 1
-  year_calendar_week:
-    - start_at_week_nr: 33
+level_year_calendar_weeks:
+  ## Programmierung
+  - id: "2.1.1"
+    year: 1
+    year_calendar_week:
+      start_at_week_nr: 33
       finish_at_week_nr: 40
-- id: 2.1.2
-  year: 2
-  year_calendar_week:
-    - start_at_week_nr: 40
+  - id: "2.1.2"
+    year: 2
+    year_calendar_week:
+      start_at_week_nr: 40
       finish_at_week_nr: 41
-- id: 2.1.3
-  year: 3
-  year_calendar_week:
-    - start_at_week_nr: 41
+  - id: "2.1.3"
+    year: 3
+    year_calendar_week:
+      start_at_week_nr: 41
       finish_at_week_nr: 42
-## Multi-Pape Applikation
-- id: 2.2.1
-  year: 1
-  year_calendar_week:
-    - start_at_week_nr: 1
+  ## Multi-Pape Applikation
+  - id: "2.2.1"
+    year: 1
+    year_calendar_week:
+      start_at_week_nr: 1
       finish_at_week_nr: 15
-## Single-Page-Applikation
-- id: 2.3.1
-  year: 1
-  year_calendar_week:
-    - start_at_week_nr: 33
+  ## Single-Page-Applikation
+  - id: "2.3.1"
+    year: 1
+    year_calendar_week:
+      start_at_week_nr: 33
       finish_at_week_nr: 40
-- id: 2.3.2
-  year: 1
-  year_calendar_week:
-    - start_at_week_nr: 41
+  - id: "2.3.2"
+    year: 1
+    year_calendar_week:
+      start_at_week_nr: 41
       finish_at_week_nr: 49
-- id: 2.3.3
-  year: 2
-  year_calendar_week:
-    - start_at_week_nr: 5
+  - id: "2.3.3"
+    year: 2
+    year_calendar_week:
+      start_at_week_nr: 5
       finish_at_week_nr: 6
-- id: 2.3.4
-  year: 3
-  year_calendar_week:
-    - start_at_week_nr: 6
+  - id: "2.3.4"
+    year: 3
+    year_calendar_week:
+      start_at_week_nr: 6
       finish_at_week_nr: 7
-- id: 2.3.5
-  year: 4
-  year_calendar_week:
-    - start_at_week_nr: 7
+  - id: "2.3.5"
+    year: 4
+    year_calendar_week:
+      start_at_week_nr: 7
       finish_at_week_nr: 8
-## API
-- id: 2.4.1
-  year: 1
-  year_calendar_week:
-    - start_at_week_nr: 47
+  ## API
+  - id: "2.4.1"
+    year: 1
+    year_calendar_week:
+      start_at_week_nr: 47
       finish_at_week_nr: 50
-- id: 2.4.2
-  year: 2
-  year_calendar_week:
-    - start_at_week_nr: 50
+  - id: "2.4.2"
+    year: 2
+    year_calendar_week:
+      start_at_week_nr: 50
       finish_at_week_nr: 51
-- id: 2.4.3
-  year: 3
-  year_calendar_week:
-    - start_at_week_nr: 51
+  - id: "2.4.3"
+    year: 3
+    year_calendar_week:
+      start_at_week_nr: 51
       finish_at_week_nr: 52
-## Build-Tools + Dependencies
-- id: 2.5.1
-  year: 1
-  year_calendar_week:
-    - start_at_week_nr: 40
+  ## Build-Tools + Dependencies
+  - id: "2.5.1"
+    year: 1
+    year_calendar_week:
+      start_at_week_nr: 40
       finish_at_week_nr: 45
-- id: 2.5.2
-  year: 2
-  year_calendar_week:
-    - start_at_week_nr: 45
+  - id: "2.5.2"
+    year: 2
+    year_calendar_week:
+      start_at_week_nr: 45
       finish_at_week_nr: 46
-- id: 2.5.3
-  year: 3
-  year_calendar_week:
-    - start_at_week_nr: 46
+  - id: "2.5.3"
+    year: 3
+    year_calendar_week:
+      start_at_week_nr: 46
       finish_at_week_nr: 47
-## Konzeption
-- id: 2.6.1
-  year: 1
-  year_calendar_week:
-    - start_at_week_nr: 45
+  ## Konzeption
+  - id: "2.6.1"
+    year: 1
+    year_calendar_week:
+      start_at_week_nr: 45
       finish_at_week_nr: 5
-- id: 2.6.2
-  year: 2
-  year_calendar_week:
-    - start_at_week_nr: 5
+  - id: "2.6.2"
+    year: 2
+    year_calendar_week:
+      start_at_week_nr: 5
       finish_at_week_nr: 6
-- id: 2.6.3
-  year: 3
-  year_calendar_week:
-    - start_at_week_nr: 6
+  - id: "2.6.3"
+    year: 3
+    year_calendar_week:
+      start_at_week_nr: 6
       finish_at_week_nr: 7
-- id: 2.6.4
-  year: 4
-  year_calendar_week:
-    - start_at_week_nr: 8
+  - id: "2.6.4"
+    year: 4
+    year_calendar_week:
+      start_at_week_nr: 8
       finish_at_week_nr: 9
-
